07.network/12.Ingress/01.Traefik/02.crd/02.k8s-https-dashboard-ingressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-dashboard-to-https
  namespace: kubernetes-dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`kr-stg-k8s-dashboard.switchboard.pro`)
    kind: Rule
    services:
    - name: kubernetes-dashboard
      port: 443
