07.network/12.Ingress/01.Traefik/02.crd/elastic-http-ingressRoute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: elastic-ingressroute
  namespace: elastic-system
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`elastic-kr-prod.switchboard.pro`)
    kind: Rule
    services:
    - name: elasticsearch-master
      port: 9200
  # - match: Host(`switchboard.pro`) && PathPrefix(`/grafana-stg`)
  #   kind: Rule
  #   services:
  #   - name: prom-operator-grafana
  #     port: 80
